[project]
name = "llms"
version = "0.1.0"
description = "One client to rule them all"
readme = "README.md"
authors = [
    { name = "Farouk Charkas", email = "farouk.charkas@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "openai>=2.1.0",
    "pydantic>=2.11.9",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
